--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "nnsdao_sdk_basic"
 version = "0.1.0"
+authors = ["NNSDAO"]
 edition = "2021"
+license = "MIT OR Apache-2.0"
+keywords = ["nnsdao", "dao", "ICP", "internet computer"]
+readme = "README.md"
+repository = "https://github.com/NnsDao/nnsdao_sdk"
+documentation = "https://docs.rs/nnsdao_sdk_basic"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
