feat: cahnge toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["NNSDAO"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
-keywords = ["nnsdao", "dao", "ICP", "internet computer"]
+keywords = ["nnsdao", "dao", "ICP"]
 readme = "README.md"
 repository = "https://github.com/NnsDao/nnsdao_sdk"
 documentation = "https://docs.rs/nnsdao_sdk_basic"
