--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,13 @@ name = "nnsdao_sdk_basic"
 version = "0.1.0"
 authors = ["NNSDAO"]
 edition = "2021"
-license = "MIT OR Apache-2.0"
-keywords = ["nnsdao", "dao", "ICP"]
+license = "Apache-2.0"
+keywords = ["nnsdao", "dao", "ICP", "dfinity", "internet-computer"]
 readme = "README.md"
 repository = "https://github.com/NnsDao/nnsdao_sdk"
 documentation = "https://docs.rs/nnsdao_sdk_basic"
+include = ["src", "Cargo.toml", "LICENSE", "README.md"]
+
 
 [dependencies]
 ic-cdk = "0.5.1"
