--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,5 @@ serde = "1.0.126"
 serde_derive = "1.0.126"
 candid = "0.7.4"
 async-trait = "0.1.56"
-actix-rt = "2.7.0"
-futures = "0.3"
+# actix-rt = "2.7.0"
+# futures = "0.3"
